# brewwery

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  rust.yml
crates/brewwery-core/: Cargo.toml  index.d.ts  index.js  package.json
crates/brewwery-core/src/: brewfile.rs  cleanup.rs  doctor.rs  errors.rs  filesystem.rs  lib.rs  packages.rs  parser.rs  permissions.rs  runner.rs  services.rs  system.rs  updates.rs
desktop/: electron-builder.yml  electron.vite.config.ts  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
desktop/src/main/: external-links.ts  index.ts  menu.ts  preload.ts  settings-storage.ts  tray.ts  window.ts
desktop/src/main/ipc/: brewfile.ts  cleanup.ts  core.ts  doctor.ts  errors.ts  index.ts  operation-progress.ts  packages.ts  services.ts  settings.ts  system.ts  updates.ts
desktop/src/renderer/: app.tsx  index.html  styles.css
desktop/src/renderer/hooks/: use-brewfile.ts  use-cleanup.ts  use-debounced-value.ts  (+8 more)
desktop/src/types/: assets.d.ts
docs/: alpha-checklist.md  architecture.md  development.md  known-issues.md  private-alpha-test-report.md  private-alpha.md  release-candidate-checklist.md  roadmap.md  security.md  signing-notarization.md
docs/release-notes/: v0.6.0-alpha.1.md  v0.6.0-alpha.2.md  v0.7.2-beta.3.md  v0.9.0.md  v0.9.1.md
scripts/: alpha-clean-install.mjs  package.sh
(+46 files in other folders)
