[package]
name = "brewwery-core"
version = "0.9.1"
edition = "2024"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
napi = { version = "3.0.0-alpha.28", default-features = false, features = ["napi4"] }
napi-derive = "3.0.0-alpha.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[build-dependencies]
napi-build = "2.1"
